<resources>
    <string name="app_name" translatable="false">Pocket Insulin</string>
    <string name="emailEmptyLabel">You need to enter a valid email address!</string>
    <string name="passwordEmptyLabel">You need to enter a password!</string>
    <string name="loginLabel" translatable="false">Login</string>
    <string name="noAccountLabel">"Still don't have an account? "</string>
    <string name="noAccountRegisterLabel">Register!</string>
    <string name="emailExampleLabel">email@example.com</string>
    <string name="passwordExampleLabel" translatable="false">password</string>
    <string name="successLoginLabel">Login successfully!</string>
    <string name="noSuccessLoginLabel">Login failed!</string>
    <string name="registerLabel">Register</string>
    <string name="confirmpasswordExampleLabel">repeat password</string>
    <string name="passwordMatch">Passwords aren\'t the same!</string>
    <string name="successRegisterLabel">Successfully registered!</string>
    <string name="noSuccessRegisterLabel">Register failed!</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="userProfileId" translatable="false">userProfileId</string>
    <string name="emptyNameLabel">Parameter name is empty.</string>
    <string name="emptyDataNascimentoLabel">Parameter birthday is empty.</string>
    <string name="emptyAlturaLabel">Parameter height is empty.</string>
    <string name="emptyGeneroLabel">Parameter genre is empty.</string>
    <string name="emptyCodPostalLabel">Parameter postal code is empty.</string>
    <string name="emptyEducacaoLabel">Parameter education is empty.</string>
    <string name="emptyTipoDiabetesLabel">Parameter type of diabetes is empty.</string>
    <string name="emptyAnoDiagLabel">Parameter year of diagnosis is empty.</string>
    <string name="successEditUserProfileSaveLabel">User profile data saved successfully!</string>
    <string name="failedEditUserProfileSaveLabel">An error ocurred while saving user profile data.</string>
    <string name="remindMe">Remind Login</string>
    <string name="userAutoLogin" translatable="false">userAutoLogin</string>
    <string name="saveLabel">Save</string>
    <string name="valueEmptyLabel">Parameter value is empty.</string>
    <string name="errorOcurredLabel">An error as ocurred, try again later.</string>
    <string name="valueSavedLabel">Value saved successfully.</string>
    <string name="emptyCHOLabel">Parameter CHO is empty.</string>
    <string name="emptyGlicemiaLabel">Parameter glycemia is empty.</string>
    <string name="emptyGlicemiaTargetLabel">Parameter glycemia target is empty.</string>
    <string name="limit_sup" translatable="false">limit_sup</string>
    <string name="limit_inf" translatable="false">limit_inf</string>
    <string name="target" translatable="false">target</string>
    <string name="allParameterEmptyLabel">At least one parameter must have a value.</string>
    <string name="allParameterNotEmptyLabel">All parameters must have a value.</string>
    <string name="successTimeSaveLabel">Schedule saved successfully.</string>
</resources>